--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ hf_transfer==0.1.9
 huggingface-hub==0.32.2
 idna==3.10
 importlib_metadata==8.7.0
+iniconfig==2.1.0
 Jinja2==3.1.6
 joblib==1.5.1
 markdown-it-py==3.0.0
@@ -49,11 +50,13 @@ packaging==25.0
 pandas==2.2.3
 peft==0.15.2
 pillow==11.2.1
+pluggy==1.6.0
 propcache==0.3.1
 protobuf==3.20.3
 psutil==7.0.0
 pyarrow==20.0.0
 Pygments==2.19.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
