--- a/requirements.txt
+++ b/requirements.txt
@@ -63,6 +63,7 @@ PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
 rich==14.0.0
+ruff==0.11.12
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.3
